# photo-bank-backend

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_02_2110-f96d97f3df3f_create_admin_table.py  2024_04_03_2349-d5d2beb3359a_create_tables_photo_photo_tag_tag.py  2024_04_04_0218-9294bb66b012_create_tables_identical_photo.py  2024_04_05_1940-d1f202ea1cb7_fix_photo_table.py
docker/: app.sh  celery.sh
src/: __init__.py  cache_memory.py  config.py  main.py  s3_storage.py
src/admins/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
src/auth/: dependencies.py  exceptions.py  schemas.py  service.py  utils.py
src/helpers/: helpers.py
src/photos/: exceptions.py  models.py  router.py  schemas.py  service.py
src/tags/: models.py  router.py  schemas.py  service.py
src/tasks/: router.py  schemas.py  service.py  tasks.py
tests/: conftest.py  test_1_admin.py  test_2_tags.py  test_3_photos.py
